[package]
name = "starknetbyte4directory"
version = "0.1.0"
edition = "2021"

[dependencies]
starknet-core = "0.11.1"
actix-web = "4"
actix-cors = "0.6.5"
uuid = { version = "1.0", features = ["serde", "v4"]}
chrono = {version = "0.4", features = ["serde"]}
diesel = { version = "2.1.0", features = ["postgres", "uuid"] }
serde = {version = "1.0.202", features = ["derive"] }
dotenv = "0.15.0"
